@@ -57,8 +57,8 @@ require_relative 'fs/components/instance_create'
 require_relative 'fs/components/instance_edit'
 require_relative 'fs/components/unsaved_list'
 require_relative 'fs/components/component_list'
-require_relative 'fs/components/meta_dir'
-require_relative 'fs/components/meta_file'
+require_relative 'fs/components/proxy_dir'
+require_relative 'fs/components/proxy_file'
 require_relative 'fs/components/info_files'
 require_relative 'fs/components/cache_stats'
 require_relative 'fs/components/pry'
